--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run Integration Tests
         run: |
           mkdir -p report/integration-allure-results
-          go test -json ./tests/integration/... | golurectl -l -e -o report/integration-allure-results --allure-suite Integration --allure-tags INTEGRATION
+          go test -p 1 -json ./tests/integration/... | golurectl -l -e -o report/integration-allure-results --allure-suite Integration --allure-tags INTEGRATION
 
       - name: Upload Integration Allure Results
         uses: actions/upload-artifact@v4
@@ -135,7 +135,7 @@ jobs:
           fi
 
       - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@v1.8
+        uses: simple-elf/allure-report-action@master
         if: always()
         with:
           allure_results: report/allure-results
