--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,10 +112,15 @@ jobs:
       - name: Merge Allure results
         run: |
           mkdir -p report/allure-results
-          cp -r tmp-allure/allure-results-unit/* report/unit-allure-results/
-          cp -r tmp-allure/allure-results-integration/* report/integration-allure-results/
-          cp -r tmp-allure/allure-results-e2e/* report/e2e-allure-results/
-          ls report/unit-allure-results/ report/integration-allure-results/ report/e2e-allure-results/
+          
+          cp -r tmp-allure/allure-results-unit/* report/allure-results/ 2>/dev/null || true
+          cp -r tmp-allure/allure-results-integration/* report/allure-results/ 2>/dev/null || true
+          cp -r tmp-allure/allure-results-e2e/* report/allure-results/ 2>/dev/null || true
+          
+          echo "Total files in allure-results:"
+          find report/allure-results -name "*.json" | wc -l
+          echo "Files from unit tests:"
+          find report/allure-results -name "*.json" | head -5
         continue-on-error: true
 
       - name: Checkout gh-pages for history
