--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,7 +109,10 @@ jobs:
       - name: Merge Allure results
         run: |
           mkdir -p report/allure-results
-          make report-merge
+          cp -r tmp-allure/allure-results-unit/* report/unit-allure-results/
+          cp -r tmp-allure/allure-results-integration/* report/integration-allure-results/
+          cp -r tmp-allure/allure-results-e2e/* report/e2e-allure-results/
+          ls report/unit-allure-results/ report/integration-allure-results/ report/e2e-allure-results/
         continue-on-error: true
 
       - name: Checkout gh-pages for history
